# Deep-Stock-Research

./: README.md  pyproject.toml
memory/: chroma.sqlite3  long_term_memory_storage.db
output/: decision.md  trending_companies.json  trending_companies_analysis_report.json
src/stock_finder/: crew.py  list_groq_models.py  main.py
src/stock_finder/config/: agents.yaml  tasks.yaml
src/stock_finder/tools/: custom_tool.py
