[project]
name = "stock_finder"
version = "0.1.0"
description = "stock finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
stock_finder = "stock_finder.main:run"
run_crew = "stock_finder.main:run"
train = "stock_finder.main:train"
replay = "stock_finder.main:replay"
test = "stock_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
